# ctre-bazel-rules

./: WORKSPACE  load_ctre.bzl
.github/workflows/: lint.yml
Phoenix/: load_ctre_from_maven.bzl
Phoenix/from_maven/v5_19_0/: ctre.bzl
Phoenix/from_maven/v5_19_1/: BUILD.bazel  ctre.bzl
Phoenix/from_maven/v5_19_2/: ctre.bzl
Phoenix/from_maven/v5_19_3/: ctre.bzl
Phoenix/from_maven/v5_19_4/: ctre.bzl
Phoenix/from_maven/v5_19_5-rc-1/: BUILD.bazel  ctre.bzl
Phoenix/from_maven/v5_19_5-rc-2/: BUILD.bazel  ctre.bzl
v5_19_0/: BUILD.bazel  ctre.bzl
v5_19_1/: BUILD.bazel  ctre.bzl
v5_19_2/: ctre.bzl
v5_19_3/: ctre.bzl
v5_19_4/: ctre.bzl
v5_19_5-rc-1/: BUILD.bazel  ctre.bzl
v5_19_5-rc-2/: BUILD.bazel  ctre.bzl
